<resources>
    <string name="app_name">InventoryManager</string>
    <string name="title_home">Home</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_profile">Profile</string>
    <string name="font">sans-serif-black</string>

    <string name="item_name">Item Name</string>
    <string name="item_name_hint">Enter name of item</string>

    <string name="purchase_date">DD/MM/YYYY</string>
    <string name="purchase_date_label">Date of Purchase or Acquisition"</string>
    <string name="purchase_date_hint">Enter date</string>

    <string name="description">Brief Description</string>
    <string name="description_hint">Enter name of item</string>

    <string name="make_label">Make</string>
    <string name="make_hint">Enter Make</string>

    <string name="model_label">Model</string>
    <string name="model_hint">Enter Model</string>

    <string name="serial_number">Serial Number (if applicable)</string>
    <string name="serial_number_hint">Enter serial number</string>

    <string name="estimate_value">Estimate Value</string>
    <string name="estimate_value_hint">Enter estimated value</string>

    <string name="comment_label">Comment</string>
    <string name="comment_hint">Enter Comment</string>

    <string name="default_text">None provided</string>
    <string name="home_button_text">Home</string>
    <string name="edit_button_text">Edit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>
    <string name="title_view_item">View Item</string>
    <string name="title_edit_item">Edit Item</string>

    <string name="add_item">Add Item</string>
    <string name="delete_button">Delete</string>
    <string name="add_tag_button">Add Tag</string>
    <string name="add_image">Add Image</string>

    <string name="total">Total Estimated Value:</string>
    <string name="total_value">$0.00</string>
    <string name="title_filtered_items">Filtered Items</string>
    <string name="title_choose_filter">Choose Filter</string>
    <string name="title_no_items_found">No Items Found</string>
    <string name="title_sort_options">Choose Sort</string>
    <string name="title_sorted_items">Sorted Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>