<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.inventorymanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_addItem"
        android:name="com.example.inventorymanager.ui.addItem.addItemFragment"
        android:label="@string/title_add_item"
        tools:layout="@layout/fragment_add_item" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.inventorymanager.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_viewItem"
        android:name="com.example.inventorymanager.ui.viewItem.ViewItemFragment"
        android:label="@string/title_view_item"
        tools:layout="@layout/fragment_view_item" />

    <fragment
        android:id="@+id/navigation_editItem"
        android:name="com.example.inventorymanager.ui.editItem.EditItemFragment"
        android:label="@string/title_edit_item"
        tools:layout="@layout/fragment_edit_item" />

    <fragment
        android:id="@+id/filteredItemsFragment"
        android:name="com.example.inventorymanager.ui.filter.filteredItemsFragment"
        android:label="@string/title_filtered_items"
        tools:layout="@layout/fragment_filtered_items" />

    <fragment
        android:id="@+id/chooseFilterFragment"
        android:name="com.example.inventorymanager.ui.filter.chooseFilterFragment"
        android:label="@string/title_choose_filter"
        tools:layout="@layout/choose_filter" />
</navigation>