<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ViewItemScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.viewItem.ViewItemFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Name of item -->
            <TextView
                android:id="@+id/addItemNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/itemNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Date of purchase/acquisition -->
            <TextView
                android:id="@+id/addPurchaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/purchase_date_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/purchaseDateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Brief description -->
            <TextView
                android:id="@+id/addDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Make -->
            <TextView
                android:id="@+id/addMakeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/make_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/makeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Model -->
            <TextView
                android:id="@+id/addModelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/model_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/modelValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Serial Number -->
            <TextView
                android:id="@+id/addSerialNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/serial_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/serialNumberValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Estimated Value -->
            <TextView
                android:id="@+id/addEstimatedValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/estimate_value"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/estimatedValueValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />

            <!-- Comment -->
            <TextView
                android:id="@+id/addCommentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/comment_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:height="60dp"
                android:text="@string/home_button_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginTop="50dp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:height="60dp"
                android:text="@string/edit_button_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/homeButton"
                app:layout_goneMarginTop="50dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"/>
    </LinearLayout>
</ScrollView>
